# XgenToHou

./: CMakeLists.txt  README.md  build.bat  main.cpp  maya-xgen.py  rebuild.bat
samples/: pSphere1.xpd
xgen/devkit/: CMakeLists.txt
xgen/devkit/xgSplineDataToXpd/: CMakeLists.txt  XgSplineDataToXpdCmd.cpp  XgSplineDataToXpdCmd.h  main.cpp
xgen/devkit/xgenArnoldProcedural/: CMakeLists.txt  XgArnoldProcedural.cpp  XgArnoldProcedural.h
xgen/devkit/xgenExternalAPI/: CMakeLists.txt  testCreateDescription.cpp  testXgExternalAPI.cpp
xgen/devkit/xgenMtoaExtension/: CMakeLists.txt
xgen/devkit/xgenRendermanProcedural/: CMakeLists.txt  XgRendermanProcedural.cpp  XgRendermanProcedural.h
xgen/devkit/xgenSampleModules/: CMakeLists.txt  XgCrossGenerator.cpp  XgCrossGenerator.h  XgGravityFXModule.cpp  XgGravityFXModule.h  XgOFFRenderer.cpp  XgOFFRenderer.h  ui.py
xgen/devkit/xgenSeExpr/: CMakeLists.txt  xgTex2DFunc.cpp  xgTex2DFunc.h
xgen/devkit/xpdSamples/: rxuv.cpp  wxuv.cpp  xpd2mel.cpp  xpd2txt.cpp  xpdcmp.cpp
xgen/include/porting/: XgWinExport.h  safevector.h
xgen/kernels/: Bitangent.cl  Clump.cl  Cut.cl  Direction.cl  Freeze.cl  Grab.cl  Length.cl  Noise.cl  Part.cl  Select.cl  SetSplineLength.cl  Smooth.cl  Tweak.cl  UndoRedo.cl  Utils.cl  Width.cl  XgModifierClump.cl  XgModifierCollision.cl  XgModifierCut.cl  XgModifierNoise.cl  XgModifierScale.cl  XgSgCurve.cl  XgUtils.cl  voxelizer.cl
xgen/lib/: AdskSeExpr.lib  AdskXGen.lib  AdskXpd.lib
xgen/plug-ins/: xgSplineDataToXpd.mll
xgen/presets/archives/: DaisyLarge1_ai.xarc  DaisyLarge2_ai.xarc  DownRed1_ai.xarc  DownRed2_ai.xarc  DownRed3_ai.xarc  FlameCurly1_ai.xarc  FlameCurly3_ai.xarc  GrassClump1_ai.xarc  GrassClump2_ai.xarc  GrassClump3_ai.xarc  TreeSimple1_ai.xarc  TreeSimple2_ai.xarc  paintfx_archives.mb
xgen/presets/archives/abc/: DaisyLarge1_ai.abc  DaisyLarge1_ai_lo.abc  DaisyLarge1_ai_med.abc  DaisyLarge2_ai.abc  DaisyLarge2_ai_lo.abc  DaisyLarge2_ai_med.abc  DownRed1_ai.abc  DownRed1_ai_lo.abc  DownRed1_ai_med.abc  DownRed2_ai_lo.abc  DownRed3_ai_lo.abc  FlameCurly1_ai.abc  FlameCurly1_ai_lo.abc  FlameCurly1_ai_med.abc  FlameCurly3_ai.abc  FlameCurly3_ai_lo.abc  FlameCurly3_ai_med.abc  GrassClump1_ai.abc  GrassClump1_ai_lo.abc  GrassClump1_ai_med.abc  GrassClump2_ai.abc  GrassClump2_ai_lo.abc  GrassClump2_ai_med.abc  GrassClump3_ai.abc  GrassClump3_ai_lo.abc  GrassClump3_ai_med.abc  TreeSimple1_ai.abc  TreeSimple1_ai_lo.abc  (+6 more)
xgen/presets/shaders/: xgenCPVRemap.xml  xgenCPVRemap0.xml  xgenCPVRemap1.xml  xgenCPVRemapPassing.xml  xgenCPVRemapPassing0.xml  xgenCPVRemapPassing1.xml  xgenCPVRemapTint.xml  xgenCPVRemapTint0.xml  xgenCPVRemapTint1.xml  xgenColorCombiner.xml  xgenFacingCameraDepth.ogsfx  xgenFacingCameraDepth10.fx  xgenFacingCameraDepthGL.cgfx  xgenFacingCameraExtraNw.xml  xgenFacingCameraGS.xml  xgenFacingCameraGSRequirements.xml  xgenFacingCameraGSTubeNormal.xml  xgenFacingCameraNormalDepth.ogsfx  xgenFacingCameraNormalDepth10.fx  xgenFacingCameraNormalDepthGL.cgfx  xgenFacingCameraShadower.ogsfx  xgenFacingCameraShadower10.fx  xgenFacingCameraShadowerGL.cgfx  xgenFacingCameraVSToGS.xml  xgenFacingCameraVSToGSBw.xml  xgenFacingCameraVSToGSNw.xml  xgenFacingCameraVSToGSPc.xml  xgenFacingCameraVSToGSPw.xml  xgenFacingCameraVSToGSRoot.xml  xgenFacingCameraVSToGSTw.xml  xgenFacingCameraVSToGSVw.xml  xgenFacingCameraVSToGSWidth.xml  xgenFacingCameraVw.xml  xgenHairMapping.xml  xgenHilightPlaced.xml  xgenTubeNormal.xml
xgen/scripts/: AExgmArchiveGuideTemplate.mel  AExgmCardGuideTemplate.mel  AExgmCurveToSplineTemplate.mel  AExgmDescriptionRelated.mel  AExgmDescriptionTemplate.mel  AExgmHairMappingTemplate.mel  AExgmModifierBaseTemplate.mel  AExgmModifierClumpTemplate.mel  AExgmModifierCollisionTemplate.mel  AExgmModifierCutTemplate.mel  AExgmModifierDisplaceTemplate.mel  AExgmModifierGuideTemplate.mel  AExgmModifierLinearWireTemplate.mel  AExgmModifierNoiseTemplate.mel  AExgmModifierScaleTemplate.mel  AExgmModifierSculptTemplate.mel  AExgmNurbsPatchTemplate.mel  AExgmPaletteTemplate.mel  AExgmSeExprTemplate.mel  AExgmSphereGuideTemplate.mel  AExgmSplineBaseTemplate.mel  AExgmSplineCacheTemplate.mel  AExgmSplineDescriptionRelated.mel  AExgmSplineDescriptionTemplate.mel  AExgmSplineGuideTemplate.mel  AExgmSubdPatchTemplate.mel  AExgmSuppressShape.mel  AExgmSuppressTransform.mel  MULibrary.mel  XgmIGBrushProperties.mel  XgmIGBrushValues.mel  dwd.mel  evalGeoUtilsContext.mel  evalTileContext.mel  iGroomUI.mel  igBaseAPI.mel  igBindGeometry.mel  igBrushContextSelect.mel  igBrushUI.mel  igCleanup.mel  (+125 more)
xgen/scripts/xgenm/: XgExternalAPI.py  __init__.py  xgCallbacks.py  xgEditor.py  xgGlobal.py  xgLog.py  xgLog_res.py  xgUtil.py
(+550 files in other folders)
